--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Rio Rizki Aryanto - Data Scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,50 +17,87 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Data Scientist</strong> | <strong>Data Analyst</strong></h1>
 				</div>
+				<nav class="navbar">
+					<a href="#about">
+						<i class="icon solid fa-user"></i>
+						About
+					</a>
+					<br>
+					<a href="#services">
+						<i class="icon solid fa-suitcase"></i>
+						Services
+					</a>
+					<br>
+					<a href="#portfolio">
+						<i class="icon solid fa-book"></i>
+						Portfolio
+					</a>
+				</nav> 
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
-					<section id="one">
+				<!-- ABOUT -->
+					<section id="about">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Hi, I'm Rio</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am an experienced Data Scientist | Data Analyst with a demonstrated history of working in the data industry since 2016. I have diverse experience in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratoy data analysis, data visualization, machine learning, and other analytical techniques.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="./about.html" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
-				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
+				<!-- SERVICES -->
+					<section id="services">
+						<h2>Services </h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Data Analysis</h3>
+								<p>Identify results, trends and recommendations with data-driven approach.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Reporting</h3>
+								<p>Improve the way to present data by using proper charts, colors, texts in interactive way.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>Data Visualization</h3>
+								<p>Understand the data better using visualization through charts or dashboard.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<h3>Data Science</h3>
+								<p>An enhance of data analysis and implementation of data science. Gather insights and values from the data by data science approach such as predicting, classification or segmentation.</p>
+							</article>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="portfolio">
+						<h2>Portfolio</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/riorizkiaryanto/clustering-nba-players" class="image fit thumb"><img src="images/fulls/nba.jpeg" alt="" /></a>
+								<h3>Cluster NBA Players</h3>
+								<p>Implement clustering model to segment the NBA players based on their performance data in season 2017-2018.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/riorizkiaryanto/ner-hmm" class="image fit thumb"><img src="images/fulls/ner.png" alt="" /></a>
+								<h3>Named Entity Recognition</h3>
+								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
+							</article>
+							<!---
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Emotion Detection</h3>
+								<p>Create a data model to identify the emotion contains in text written in Indonesian.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<h3>Sentiment Analysis using Spark</h3>
+								<p>Implementation of Spark in the sentiment analysis using SparkNLP.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
@@ -72,16 +109,17 @@
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
+							-->
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/riorizkiaryanto" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Let's connect to discuss how I as a data expert can help you solve the challenges based on data-driven approach.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -99,17 +137,16 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Yogyakarta, 55581<br />
+										Indonesia
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										+62 81 229 709 066
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">riorizkiaryanto@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -440,10 +477,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/riorizki23" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/riorizkiaryanto" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/riorizkiaryanto/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://medium.com/@riorizkiaryanto" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<li><a href="https://www.instagram.com/riorizki/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<!-- <li><a href="" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
