clean some of the text, change image background

--- a/about.html
+++ b/about.html
@@ -69,15 +69,19 @@
                         <strong>Work Experiences</strong>
                     </h2>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Data Scientist | Manager of data</strong>
-                        <p style="font-size: 18px">FlavorWiki (April 2019-January 2023)</p>
+                        <strong style="color: lightseagreen; font-size: 18px">Lead Data Scientist | Manager of data team</strong>
+                        <p style="font-size: 18px"><a href="https://business.flavorwiki.com/"><strong>FlavorWiki</strong></a> | <em><strong>Smart Sensory Analytics LLC</strong></em> (April 2019-January 2023)</p>
+                        <p style="font-size: 18px; text-align: justify">The role of lead data scientist has varied responsibilities. It scope the role of data analyst and data engineer at the same time. It lead a team consist of Jr. Data Scientists and work together with insight, marketing and development team in a daily basis.</p>
+                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
-                            <li>As a data scientist: Support insight team to provide data analysis, insight and even recommendation regarding the market research specific in a sensory analysis</li>
-                            <li>As a data engineer | backend developer: Work togetzher with the developer team to both maintain and build new features related to data in the FlavorWiki application</li>
-                            <li>Together with the marketing and operational team to monitor ongoing projects and give suggestions if needed</li>
-                            <li>Conduct research, developing data model and create documentation related to data analysis in sensory field</li>
-                            <li>Do ad-hoc request. Mostly related to the data analysis or reporting</li>
-                            <li>Lead a data team with members of Jr. Data Scientist</li>
+                            <li>Support FlavorWiki's Insight team by providing analysis of market research data. Convert data into valuable insights and recommendations</li>
+                            <li>Part of development team as backend dev. The role is to maintain as well as build new features related to any data tasks in the FlavorWiki's application</li>
+                            <li>Help marketing and operational team to monitor the data collection process in the ongoing projects and provide advices if needed</li>
+                            <li>Create a data dashboard to support other team's exposure to any data which they needed</li>
+                            <li>Conduct research related to any data model in the sensory field</li>
+                            <li>Provide documentation regarding any task related to the data in FlavorWiki's services</li>
+                            <li>Provide ad-hoc requests. Usually came from the client side and related to further data analysis</li>
+                            <li>Lead a small team consist of 2 Jr. Data Scientist. Other than allocating the works, it also provide training so the team's skills can be improved and support company's visions</li>
                         </ul>
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
@@ -107,13 +111,16 @@
                     <br>
                     <div>
                         <strong style="color: lightseagreen; font-size: 18px">Data Scientist | Head of data</strong>
-                        <p style="font-size: 18px">Thrive (August 2017-April 2019)</p>
+                        <p style="font-size: 18px"><a href="https://www.thrive.co.id/"><strong>Thrive</strong></a> | <em><strong>PT. Gema Teknologi Cahaya Gemilang</strong></em> (August 2017-April 2019)</p>
+                        <p style="font-size: 18px; text-align:justify">Leading a small data team consist of data analyst and data engineer. Supervise this amazing talents in the last one and a half worked in the company. Started as data engineer but then quickly switched to data scientist to accomodate the company needed.</p>
+                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
-                            <li>Supervise team with member of data scientist, data analyst and data engineer</li>
+                            <li>Supervise a data team by allocating works and also provide training to improve all member skills</li>
                             <li>Maintain communication both internally and externally with the chiefs and the clients</li>
-                            <li>As a data scientist: Conduct researches about statistics, machine learning or any data models that could be implemented in the company's services</li>
-                            <li>As a data analyst: Assisting project manager and client to gather any insight from the projects, monitor the data collection, provide visualization, reporting and suggestions</li>
-                            <li>As a data engineer: Perform extract, load and transform (ETL) process and handle the data pipeline</li>
+                            <li>Conduct researchs related to statistics, data models, or even machine leaning implementation that somehow suit with the company's services</li>
+                            <li>Assisting project manager and clients regarding the ongoing projects</li>
+                            <li>Provide data analysis related to the projects. Gather any insights and recommendation that can help client to take better decisions</li>
+                            <li>Maintain data pipeline in the projects</li>
                         </ul>
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
@@ -148,11 +155,13 @@
                     <br>
                     <div>
                         <strong style="color: lightseagreen; font-size: 18px">Jr. Data Scientist</strong>
-                        <p style="font-size: 18px">Dattabot (August 2016-August 2017)</p>
+                        <p style="font-size: 18px"><a href="https://dattabot.io/"><strong>Dattabot</strong></a> | <em><strong>PT. Mediatrac Sistem Komunikasi</strong></em> (August 2016-August 2017)</p>
+                        <p style="font-size: 18px; text-align: justify">In Dattabot, Jr. Data Scientist role is a part of Research and Development team (RnD). It was under supervise of a Senior Data Scientist and the main responsibilities are either to take part on the ongoing projects or delevop a new data model that can be converted into new company's services.</p>
+                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
-                            <li>Part of Research and Development team to identify a new potential product or service</li>
+                            <li>Conduct research related to any data model that can be potentially converted into company's new services</li>
                             <li>Conduct research related to Natural Language Processing especially for field called Named Entity Recognition using Hidden Markov Model algorithm</li>
-                            <li>Together with the data engineer to develop a new product or service</li>
+                            <li>Together with the data engineer developing a new product or service</li>
                         </ul>
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
@@ -169,11 +178,13 @@
                     <br>
                     <div>
                         <strong style="color: lightseagreen; font-size: 18px">Data Analyst</strong>
-                        <p style="font-size: 18px">Adstensity (January 2016-August 2016)</p>
+                        <p style="font-size: 18px"><a href="http://www.adstensity.com/"><strong>Adstensity</strong></a> | <em><strong>PT. SIGI Kaca Pariwara</strong></em> (January 2016-August 2016)</p>
+                        <p style="font-size: 18px; text-align: justify">Adstensity is TV Ad Monitoring that performs data mining from TV broadcast. As a data analyst, my daily works basically are related to perform an analysis related to TV ads monitoring.</p>
+                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
-                            <li>Monitor and validate a new data entry regarding the television ads in the database and make sure it align with the master data</li>
-                            <li>Perform data analysis for reporting</li>
-                            <li>Provide a regular report both interanlly and externally</li>
+                            <li>Monitor and validate a new data entry and make sure it align with the master data in the database</li>
+                            <li>Perform data analysis for reporting purpose both internally and externally</li>
+                            <li>Provide a regular client reports</li>
                         </ul>
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
@@ -227,7 +238,7 @@
                     <h2 style="text-align: left; font-weight: bold">
                         <strong>Educations</strong>
                     </h2>
-                    <p style="text-align: justify; font-size: 18px"><strong>Master of Informatics</strong>, Universitas Islam Indonesia (<em>February 2019-February 2021</em>)</p>
+                    <p style="text-align: justify; font-size: 18px"><strong>Master of Informatics</strong>, Universitas Islam Indonesia (<em>February 2020-February 2022</em>)</p>
                     <p style="text-align: justify; font-size: 18px"><strong>Bachelor Degree of Statistics</strong>, Universitas Gadjah Mada (<em>August 2011-May 2015</em>)</p>
                 </section>
 	</body>
