--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<header class="major">
 							<h2>Hi, I'm Rio</h2>
 						</header>
-						<p>I am an experienced Data Scientist | Data Analyst with a demonstrated history of working in the data industry since 2016. I have diverse experience in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratoy data analysis, data visualization, machine learning, and other analytical techniques.</p>
+						<p style="text-align: justify">I am an experienced <strong>Data Scientist</strong> | <strong>Data Analyst</strong> with a demonstrated history of working in the data industry since 2016. I have diverse experience in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratoy data analysis, data visualization, machine learning, and other analytical techniques.</p>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
 						</ul>
@@ -56,20 +56,20 @@
 						<h2>Services </h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Data Analysis</h3>
-								<p>Identify results, trends and recommendations with data-driven approach.</p>
+								<h3 style="font-size: 18px">Data Analysis</h3>
+								<p>Analyze the data to identify patterns, trends and anything else using data-driven approach.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Reporting</h3>
-								<p>Improve the way to present data by using proper charts, colors, texts in interactive way.</p>
+								<h3 style="font-size: 18px">Data Consulting</h3>
+								<p>Provide consultation sessions based on the problem and the available data.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Data Visualization</h3>
-								<p>Understand the data better using visualization through charts or dashboard.</p>
+								<h3 style="font-size: 18px">Data Visualization</h3>
+								<p>Visualize the data into interactive dashboard</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Data Science</h3>
-								<p>An enhance of data analysis and implementation of data science. Gather insights and values from the data by data science approach such as predicting, classification or segmentation.</p>
+								<h3 style="font-size: 18px">Data Science</h3>
+								<p>Implement data science to convert the data into valuable and meaningful insights.</p>
 							</article>
 						</div>
 					</section>
@@ -80,7 +80,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/clustering-nba-players" class="image fit thumb"><img src="images/fulls/nba.jpeg" alt="" /></a>
-								<h3>Cluster NBA Players</h3>
+								<h3>Clustering NBA Players</h3>
 								<p>Implement clustering model to segment the NBA players based on their performance data in season 2017-2018.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -88,12 +88,12 @@
 								<h3>Named Entity Recognition</h3>
 								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
 							</article>
-							<!---
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Emotion Detection</h3>
+								<a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" class="image fit thumb"><img src="images/fulls/emotion.png" alt="" /></a>
+								<h3>Emotion Detection on Text</h3>
 								<p>Create a data model to identify the emotion contains in text written in Indonesian.</p>
 							</article>
+							<!---
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Sentiment Analysis using Spark</h3>
@@ -119,7 +119,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Let's connect to discuss how I as a data expert can help you solve the challenges based on data-driven approach.</p>
+						<p>Let's connect to discuss how I can help you solve the problems using data-driven approach or even data science implementation.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
