clean some repo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 						<header class="major">
 							<h2>Hi, I'm Rio</h2>
 						</header>
-						<p style="text-align: justify">I am an experienced <strong>Data Scientist</strong> | <strong>Data Analyst</strong> with a demonstrated history of working in the data industry since 2016. I have diverse experience in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratoy data analysis, data visualization, machine learning, and other analytical techniques.</p>
+						<p style="text-align: justify">I am an experienced <strong>Data Scientist</strong> | <strong>Data Analyst</strong> with a demonstrated history of working in the data industry since 2016. I have diverse experiences in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratory data analysis, data visualization, machine learning, and other analytical techniques.</p>
+						<br>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
 						</ul>
