change background image

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 								<h3>Named Entity Recognition</h3>
 								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" class="image fit thumb"><img src="images/fulls/emotion.png" alt="" /></a>
 								<h3>Emotion Detection on Text</h3>
 								<p>Create a data model to identify the emotion contains in text written in Indonesian.</p>
-							</article> -->
+							</article>
 							<!---
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
