clean the about me page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Rio Rizki Aryanto - Data Scientist</title>
+		<title>Rio Rizki Aryanto - About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
@@ -69,7 +69,7 @@
                         <strong>Work Experiences</strong>
                     </h2>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Lead Data Scientist | Manager of data team</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">LEAD DATA SCIENTIST | MANAGER OF DATA</strong>
                         <p style="font-size: 18px"><a href="https://business.flavorwiki.com/"><strong>FlavorWiki</strong></a> | <em><strong>Smart Sensory Analytics LLC</strong></em> (April 2019-January 2023)</p>
                         <p style="font-size: 18px; text-align: justify">The role of lead data scientist has varied responsibilities. It scope the role of data analyst and data engineer at the same time. It lead a team consist of Jr. Data Scientists and work together with insight, marketing and development team in a daily basis.</p>
                         <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
@@ -110,7 +110,7 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Data Scientist | Head of data</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">DATA SCIENTIST | HEAD OF DATA</strong>
                         <p style="font-size: 18px"><a href="https://www.thrive.co.id/"><strong>Thrive</strong></a> | <em><strong>PT. Gema Teknologi Cahaya Gemilang</strong></em> (August 2017-April 2019)</p>
                         <p style="font-size: 18px; text-align:justify">Leading a small data team consist of data analyst and data engineer. Supervise this amazing talents in the last one and a half worked in the company. Started as data engineer but then quickly switched to data scientist to accomodate the company needed.</p>
                         <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
@@ -154,7 +154,7 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Jr. Data Scientist</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Jr. DATA SCIENTIST</strong>
                         <p style="font-size: 18px"><a href="https://dattabot.io/"><strong>Dattabot</strong></a> | <em><strong>PT. Mediatrac Sistem Komunikasi</strong></em> (August 2016-August 2017)</p>
                         <p style="font-size: 18px; text-align: justify">In Dattabot, Jr. Data Scientist role is a part of Research and Development team (RnD). It was under supervise of a Senior Data Scientist and the main responsibilities are either to take part on the ongoing projects or delevop a new data model that can be converted into new company's services.</p>
                         <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
@@ -177,7 +177,7 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Data Analyst</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">DATA ANALYST</strong>
                         <p style="font-size: 18px"><a href="http://www.adstensity.com/"><strong>Adstensity</strong></a> | <em><strong>PT. SIGI Kaca Pariwara</strong></em> (January 2016-August 2016)</p>
                         <p style="font-size: 18px; text-align: justify">Adstensity is TV Ad Monitoring that performs data mining from TV broadcast. As a data analyst, my daily works basically are related to perform an analysis related to TV ads monitoring.</p>
                         <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
