add new section in latest projects section

--- a/index.html
+++ b/index.html
@@ -77,33 +77,33 @@
 
 				<!-- Two -->
 					<section id="portfolio">
-						<h2>Portfolio</h2>
+						<h2>Latest Projects</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/riorizkiaryanto/recommendation-system-undergraduate-program" class="image fit thumb"><img src="images/fulls/recommendation_system.jpg" alt="" /></a>
+								<h3>Recommendation System for Undergraduate Programs Selection</h3>
+								<p>Create a recommendation system for undergraduate programs selection using machine learning approach and implement classification model.</p>
+							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/clustering-nba-players" class="image fit thumb"><img src="images/fulls/nba.jpeg" alt="" /></a>
 								<h3>Clustering NBA Players</h3>
 								<p>Implement clustering model to segment the NBA players based on their performance data in season 2017-2018.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/riorizkiaryanto/ner-hmm" class="image fit thumb"><img src="images/fulls/ner.png" alt="" /></a>
-								<h3>Named Entity Recognition</h3>
-								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" class="image fit thumb"><img src="images/fulls/emotion.png" alt="" /></a>
 								<h3>Emotion Detection on Text</h3>
 								<p>Create a data model to identify the emotion contains in text written in Indonesian.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/riorizkiaryanto/ner-hmm" class="image fit thumb"><img src="images/fulls/ner.png" alt="" /></a>
+								<h3>Named Entity Recognition</h3>
+								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
+							</article>
 							<!---
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Sentiment Analysis using Spark</h3>
 								<p>Implementation of Spark in the sentiment analysis using SparkNLP.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
