adding new working experience

--- a/about.html
+++ b/about.html
@@ -70,6 +70,49 @@
                     </h2>
                     <div>
                         <strong style="color: lightseagreen; font-size: 18px">LEAD DATA SCIENTIST | MANAGER OF DATA</strong>
+                        <p style="font-size: 18px"><a href="https://www.thrive.co.id/"><strong>Thrive</strong></a> | <em><strong>PT. Gema Teknologi Cahaya Gemilang</strong></em> (February 2023-Present)</p>
+                        <p style="font-size: 18px; text-align:justify">Leading a team consist of data analyst, data engineer and adops. This team responsible to monitor any digital marketing activities both internal and external for project based. Other than that, the team core is still related to data activities such as data analysis, build data pipeline, doing research, as well as giving any data consultation. </p>
+                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
+                        <ul style="font-size: 18px; text-align: justify">
+                            <li>Act as a manager to maintain communitation between stakeholder both internally or for client projects</li>
+                            <li>Supervise both data and adops team to support company services</li>
+                            <li>Assisting project manager and clients regarding the ongoing projects</li>
+                            <li>Conduct research related to data science, machine learning and artifical intelegence as a part of research and development process to growth the company</li>
+                            <li>Provide data analysis to collect insights and suggest recommendation to help the client make a better decisions</li>
+                            <li>Maintain data pipeline in the projects</li>
+                        </ul>
+                        <h3 style="text-align:center; font-size:18px">Clients</h3>
+                        <div class="slider">
+                            <div>
+                                <img src="/images/brands/bmw-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/ilotte-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/kalbe-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/kawasaki-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/lexus-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/owndays-2.png">
+                            </div>
+                            <div>
+                                <img src="/images/brands/pharos-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/sharp-2.jpeg">
+                            </div>
+                            <div>
+                                <img src="/images/brands/tam-2.jpeg">
+                            </div>                                
+                    </div>
+                    <div>
+                        <strong style="color: lightseagreen; font-size: 18px">LEAD DATA SCIENTIST | MANAGER OF DATA</strong>
                         <p style="font-size: 18px"><a href="https://business.flavorwiki.com/"><strong>FlavorWiki</strong></a> | <em><strong>Smart Sensory Analytics LLC</strong></em> (April 2019-January 2023)</p>
                         <p style="font-size: 18px; text-align: justify">The role of lead data scientist has varied responsibilities. It scope the role of data analyst and data engineer at the same time. It lead a team consist of Jr. Data Scientists and work together with insight, marketing and development team in a daily basis.</p>
                         <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
