update the information

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<header class="major">
 							<h2>Hi, I'm Rio</h2>
 						</header>
-						<p style="text-align: justify">I am an experienced <strong>Data Scientist</strong> | <strong>Data Analyst</strong> with a demonstrated history of working in the data industry since 2016. I have diverse experiences in several different fields such as data consulting, advertising, marketing, social media and the latest is in the sensory analysis. Advanced in the data science including statistics, exploratory data analysis, data visualization, machine learning, and other analytical techniques.</p>
+						<p style="text-align: justify">Experienced data scientist with a proven track record of 7 years in data analysis, data consulting, advertising, and market research. Proficient in data science, statistics, and machine learning, utilizing Python as my primary tool. I also bring back-end development experience with a focus on Python. Strong educational background, holding a bachelor’s degree in Statistics and a Master of Informatics with a specialization in data science.</p>
 						<br>
 						<ul class="actions">
 							<li><a href="./about.html" class="button">Learn More</a></li>
@@ -58,19 +58,19 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="font-size: 18px">Data Analysis</h3>
-								<p>Analyze the data to identify patterns, trends and anything else using data-driven approach.</p>
+								<p>Unleashing the power of data analysis: Delivering comprehensive data analysis services to unravel hidden patterns, extract meaningful insights, and drive data-informed decision-making for enhanced business outcomes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="font-size: 18px">Data Consulting</h3>
-								<p>Provide consultation sessions based on the problem and the available data.</p>
+								<p>Empowering organizations with data expertise: Offering professional data consulting services to guide businesses in leveraging their data assets, driving informed strategies, and maximizing growth potential.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="font-size: 18px">Data Visualization</h3>
-								<p>Visualize the data into interactive dashboard</p>
+								<p>Visualizing data for impactful insights: Transforming complex datasets into visually compelling representations that facilitate a deep understanding of trends, correlations, and key findings, empowering informed decision-making and effective communication of data-driven insights.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3 style="font-size: 18px">Data Science</h3>
-								<p>Implement data science to convert the data into valuable and meaningful insights.</p>
+								<p>Pioneering data science solutions: Harnessing the power of advanced analytics, machine learning, and statistical modeling techniques to extract actionable insights, optimize processes, and drive innovation in diverse domains, revolutionizing the way organizations leverage data for strategic advantage.</p>
 							</article>
 						</div>
 					</section>
@@ -81,23 +81,23 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/recommendation-system-undergraduate-program" class="image fit thumb"><img src="images/fulls/recommendation_system.jpg" alt="" /></a>
-								<h3>Recommendation System for Undergraduate Programs Selection</h3>
-								<p>Create a recommendation system for undergraduate programs selection using machine learning approach and implement classification model.</p>
+								<h3>Guiding Your Path: A Robust Recommendation System for Undergraduate Program Selection</h3>
+								<p>Developing an advanced machine learning-based recommendation system, employing a robust classification model, to facilitate the optimal selection of undergraduate programs.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/clustering-nba-players" class="image fit thumb"><img src="images/fulls/nba.jpeg" alt="" /></a>
-								<h3>Clustering NBA Players</h3>
-								<p>Implement clustering model to segment the NBA players based on their performance data in season 2017-2018.</p>
+								<h3>Exploring Player Similarities: Clustering NBA Players</h3>
+								<p>Utilize a state-of-the-art clustering model to effectively segment NBA players, leveraging their performance data from the 2017-2018 season.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/emotion-detection-on-text" class="image fit thumb"><img src="images/fulls/emotion.png" alt="" /></a>
-								<h3>Emotion Detection on Text</h3>
-								<p>Create a data model to identify the emotion contains in text written in Indonesian.</p>
+								<h3>Unveiling Emotions: Text-based Emotion Detection</h3>
+								<p>Crafting an advanced data model for accurate emotion detection in Indonesian text.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://github.com/riorizkiaryanto/ner-hmm" class="image fit thumb"><img src="images/fulls/ner.png" alt="" /></a>
-								<h3>Named Entity Recognition</h3>
-								<p>Implementing Hidden Markov Model in Named Entity Recognition for text in Indonesian.</p>
+								<h3>Unleashing the Potential of Hidden Markov Model in Named Entity Recognition for Indonesian Text</h3>
+								<p>Leveraging the Power of Hidden Markov Model: Advancing Named Entity Recognition for Indonesian Text.</p>
 							</article>
 							<!---
 							<article class="col-6 col-12-xsmall work-item">
@@ -119,8 +119,8 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Let's connect to discuss how I can help you solve the problems using data-driven approach or even data science implementation.</p>
+						<h2>Connect with Me</h2>
+						<p>Let's connect to explore how I can solve your challenges using data-driven approaches or data science implementation.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
