--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@
                         <strong>Work Experiences</strong>
                     </h2>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">LEAD DATA SCIENTIST | MANAGER OF DATA</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Lead of Data</strong>
                         <p style="font-size: 18px"><a href="https://www.thrive.co.id/"><strong>Thrive</strong></a> | <em><strong>PT. Gema Teknologi Cahaya Gemilang</strong></em> (February 2023-Present)</p>
-                        <p style="font-size: 18px; text-align:justify">Leading a team consist of data analyst, data engineer and adops. This team responsible to monitor any digital marketing activities both internal and external for project based. Other than that, the team core is still related to data activities such as data analysis, build data pipeline, doing research, as well as giving any data consultation. </p>
-                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
+                        <p style="font-size: 18px; text-align:justify">I manage and guide a talented team while also contributing as an individual data engineer. I oversee workload management, mentorship, and provide technical guidance to facilitate the team's growth. Additionally, I specialize in coding for data retrieval and efficient ETL processes, ensuring seamless access to high-quality data for analysis. I maintain effective communication with internal stakeholders and clients to align strategies and deliver exceptional service.</p>
+                        <!-- <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
                             <li>Act as a manager to maintain communitation between stakeholder both internally or for client projects</li>
                             <li>Supervise both data and adops team to support company services</li>
@@ -80,7 +80,7 @@
                             <li>Conduct research related to data science, machine learning and artifical intelegence as a part of research and development process to growth the company</li>
                             <li>Provide data analysis to collect insights and suggest recommendation to help the client make a better decisions</li>
                             <li>Maintain data pipeline in the projects</li>
-                        </ul>
+                        </ul> -->
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
                             <div>
@@ -114,11 +114,11 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">LEAD DATA SCIENTIST | MANAGER OF DATA</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Manager of Data | Data Engineer | Back-end Developer</strong>
                         <p style="font-size: 18px"><a href="https://business.flavorwiki.com/"><strong>FlavorWiki</strong></a> | <em><strong>Smart Sensory Analytics LLC</strong></em> (April 2019-January 2023)</p>
-                        <p style="font-size: 18px; text-align: justify">The role of lead data scientist has varied responsibilities. It scope the role of data analyst and data engineer at the same time. It lead a team consist of Jr. Data Scientists and work together with insight, marketing and development team in a daily basis.</p>
-                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
-                        <ul style="font-size: 18px; text-align: justify">
+                        <p style="font-size: 18px; text-align: justify">I led and managed a team of Junior Data Scientists, guiding their work, managing their workload, and fostering their growth in data analysis. In addition to my managerial responsibilities, I actively contributed as a Data Engineer | Back=end Developer, handling the engineering and development aspect myself. This included ensuring the smooth operation of data analysis features within FlavorWiki's application, optimizing their performance and reliability. Collaborating with cross-functional teams, I delivered valuable insights and supported client projects through statistical analysis.</p>
+                        <!-- <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p> -->
+                        <!-- <ul style="font-size: 18px; text-align: justify">
                             <li>Support FlavorWiki's Insight team by providing analysis of market research data. Convert data into valuable insights and recommendations</li>
                             <li>Part of development team as backend dev. The role is to maintain as well as build new features related to any data tasks in the FlavorWiki's application</li>
                             <li>Help marketing and operational team to monitor the data collection process in the ongoing projects and provide advices if needed</li>
@@ -127,7 +127,7 @@
                             <li>Provide documentation regarding any task related to the data in FlavorWiki's services</li>
                             <li>Provide ad-hoc requests. Usually came from the client side and related to further data analysis</li>
                             <li>Lead a small team consist of 2 Jr. Data Scientist. Other than allocating the works, it also provide training so the team's skills can be improved and support company's visions</li>
-                        </ul>
+                        </ul> -->
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
                             <div>
@@ -155,10 +155,10 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">DATA SCIENTIST | HEAD OF DATA</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Data Scientist | Head of Data</strong>
                         <p style="font-size: 18px"><a href="https://www.thrive.co.id/"><strong>Thrive</strong></a> | <em><strong>PT. Gema Teknologi Cahaya Gemilang</strong></em> (August 2017-April 2019)</p>
-                        <p style="font-size: 18px; text-align:justify">Leading a small data team consist of data analyst and data engineer. Supervise this amazing talents in the last one and a half worked in the company. Started as data engineer but then quickly switched to data scientist to accomodate the company needed.</p>
-                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
+                        <p style="font-size: 18px; text-align:justify">I played a pivotal role as a Data Engineer, Data Analyst, and Data Scientist in the organization. My primary responsibilities involved handlind the end-to-end ETL process, ensuring seamless data flow for analysis. Leveraging my expertise in data analysis, I extracted insights, generated recommendations, and supported decision-making processes. Additionally, as a Data Scientist, I conducted research, implemented advanced techniques, and developed user-friendly data dashboard that facilitated KPI monitoring and tracking, enabling clients and other teams to easily understand and utilize the data. Simultaneously, I also managing a data team by guiding and mentoring the team to ensure we collectivelly supported the company's services.</p>
+                        <!-- <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
                             <li>Supervise a data team by allocating works and also provide training to improve all member skills</li>
                             <li>Maintain communication both internally and externally with the chiefs and the clients</li>
@@ -166,7 +166,7 @@
                             <li>Assisting project manager and clients regarding the ongoing projects</li>
                             <li>Provide data analysis related to the projects. Gather any insights and recommendation that can help client to take better decisions</li>
                             <li>Maintain data pipeline in the projects</li>
-                        </ul>
+                        </ul> -->
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
                             <div>
@@ -199,15 +199,15 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">Jr. DATA SCIENTIST</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Jr. Data Scientist</strong>
                         <p style="font-size: 18px"><a href="https://dattabot.io/"><strong>Dattabot</strong></a> | <em><strong>PT. Mediatrac Sistem Komunikasi</strong></em> (August 2016-August 2017)</p>
-                        <p style="font-size: 18px; text-align: justify">In Dattabot, Jr. Data Scientist role is a part of Research and Development team (RnD). It was under supervise of a Senior Data Scientist and the main responsibilities are either to take part on the ongoing projects or delevop a new data model that can be converted into new company's services.</p>
-                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
+                        <p style="font-size: 18px; text-align: justify">As a Jr. Data Scientist in the Research and Development Team, I focused on developing data models for social media analysis, particularly in the area of Named Entity Recognition using the Hidden Markov Model algorithm. Collaborating closely with the data engineer, I contributed to the design and refinement of innovative data models with the potential to become new company products. My daily responsibilities involved conducting research, providing insights, and actively participating in the iterative improvement of the data models for enhanced accuracy and effectiveness in extracting relevant information from social media sources. This experience further developed my skills and knowledge in data science, specifically in the application of data models to real-world challenges in social media analyis.</p>
+                        <!-- <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
                             <li>Conduct research related to any data model that can be potentially converted into company's new services</li>
                             <li>Conduct research related to Natural Language Processing especially for field called Named Entity Recognition using Hidden Markov Model algorithm</li>
                             <li>Together with the data engineer developing a new product or service</li>
-                        </ul>
+                        </ul> -->
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
                             <div>
@@ -222,15 +222,15 @@
                     </div>
                     <br>
                     <div>
-                        <strong style="color: lightseagreen; font-size: 18px">DATA ANALYST</strong>
+                        <strong style="color: lightseagreen; font-size: 18px">Data Analyst</strong>
                         <p style="font-size: 18px"><a href="http://www.adstensity.com/"><strong>Adstensity</strong></a> | <em><strong>PT. SIGI Kaca Pariwara</strong></em> (January 2016-August 2016)</p>
-                        <p style="font-size: 18px; text-align: justify">Adstensity is TV Ad Monitoring that performs data mining from TV broadcast. As a data analyst, my daily works basically are related to perform an analysis related to TV ads monitoring.</p>
-                        <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
+                        <p style="font-size: 18px; text-align: justify">As a data analyst at Adstensity, a product of Binokular Media Utama specializing in monitoring television ad data, I was responsible for validating new data entries in the database and ensuring alignment with the master data. I conducted in-depth analysis to provide valuable insights for clients in the advertising industry and supported the internal team at Tirto.id, a media publisher, by providing data analysis for news articles. This role allowed me to develop expertise in data validation, analysis, and generating actionable insights from large datasets in the context of television advertising.</p>
+                        <!-- <p style="font-size: 18px; text-align: justify"><strong>Scope of works</strong>:</p>
                         <ul style="font-size: 18px; text-align: justify">
                             <li>Monitor and validate a new data entry and make sure it align with the master data in the database</li>
                             <li>Perform data analysis for reporting purpose both internally and externally</li>
                             <li>Provide a regular client reports</li>
-                        </ul>
+                        </ul> -->
                         <h3 style="text-align:center; font-size:18px">Clients</h3>
                         <div class="slider">
                             <div>
