try to fixing indexing

--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                                             <h2 class="fw-bolder">Guiding Your Path: A Robust Recommendation System for Undergraduate Program Selection</h2>
                                             <p>Developing an advanced machine learning-based recommendation system, employing a robust classification model, to facilitate the optimal selection of undergraduate programs.</p>
                                         </div>
-                                        <img class="img-fluid" src="./assets/college_students.jpg" alt="https://unsplash.com/photos/qlP7MgTFwpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
+                                        <img class="img-fluid" src="dist/assets/college_students.jpg" alt="https://unsplash.com/photos/qlP7MgTFwpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +63,7 @@
                                             <h2 class="fw-bolder">Exploring Player Similarities: Clustering NBA Players</h2>
                                             <p> Utilize a state-of-the-art clustering model to effectively segment NBA players, leveraging their performance data from the 2017-2018 season.</p>
                                         </div>
-                                        <img class="img-fluid" src="./assets/nba_players.jpg" alt="https://unsplash.com/photos/Gd-w-yUOsE0?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
+                                        <img class="img-fluid" src="dist/assets/nba_players.jpg" alt="https://unsplash.com/photos/Gd-w-yUOsE0?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
                                     </div>
                                 </div>
                             </div>
@@ -75,7 +75,7 @@
                                             <h2 class="fw-bolder">Unveiling Emotions: Text-based Emotion Detection</h2>
                                             <p>Crafting an Advanced Data Model for Accurate Emotion Detection in Indonesian Text</p>
                                         </div>
-                                        <img class="img-fluid" src="./assets/text_emotion.jpg" alt="https://unsplash.com/photos/FVtG38Cjc_k?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
+                                        <img class="img-fluid" src="dist/assets/text_emotion.jpg" alt="https://unsplash.com/photos/FVtG38Cjc_k?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
                                     </div>
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                                             <h2 class="fw-bolder">Unleashing the Potential of Hidden Markov Model in Named Entity Recognition for Indonesian Text</h2>
                                             <p>Leveraging the Power of Hidden Markov Model: Advancing Named Entity Recognition for Indonesian Text.</p>
                                         </div>
-                                        <img class="img-fluid" src="./assets/entity_recognition.jpg" alt="https://unsplash.com/photos/R4N7l_B7r2M?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
+                                        <img class="img-fluid" src="dist/assets/entity_recognition.jpg" alt="https://unsplash.com/photos/R4N7l_B7r2M?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" />
                                     </div>
                                 </div>
                             </div>
